--- a/plugin.program.YoshiKodiWizard/changelog.txt
+++ b/plugin.program.YoshiKodiWizard/changelog.txt
@@ -1,8 +1,10 @@
-v1.1.7 Removed the old way of updating the Wizard from the code and changed the addon name to The Yoshi Wizard
+v0.1.7a
+-Mod   tweaked code to prevent 2nd startup
+-Fixed bug where started with second char in notifications
+-Fixed bug when only 1 build is avaliable and shows kodi version and save data twice
+-Fixed bug in backup build
 
-v1.1.6 added auto install of Yoshi's Repo 
-
-v1.1.4
+v0.1.7
 -Added First Run Save Data Window
 -Added New Window for Viewing Log Files
 -Added Custom window for TextBoxes
@@ -43,7 +45,7 @@ v1.1.4
 -Fixed Bugs in Backup/Restore when using external and network locations
 -Rem   Header and message font size in uservar.py
 
-v1.1.3
+v0.1.6
 -Added Auto Clean Up Fequency on Startup
 -Added Remove Old Thumbnails on startup
 -Added Enable/Disable Addons in maintenance
@@ -86,15 +88,78 @@ v1.1.3
 -Mod   If the wizard is stored in the Official Kodi folder, moves it to /Kodi/addons/
 -Mod   Clear Packages on startup doesnt effect files created in the last 5 minutes
 
+v0.1.5
+-Added MetalliQ & Meta support for trakt data
+-Added Import Data for trakt, debrid, login *
+-Added Login Data with several addons to Saved Data Menu
+-Added Open Settings for addons in trakt, debrid, login
+-Added More debugging for startup.py and default.py
+-Added Developer Menu: Backup Theme, guiFix, and build zip
+-Added Developer Menu: Restore local zip and guifix
+-Added Developer Menu: Restore external zip and guifix(IE: hosted on site)
+-Added Developer Menu: Remove non ASCII file names
+-Added Check for skin set back to default on startup
+-Added More support for .log files
+-Added New Window for build update, contact and first run
+-Added Hide/Unhide Passwords and remove crash logs to maintenance menu
+-Mod   Complete recoded of the trakt, debrid, and login files and menus.
+-Mod   Apk Installer menu now always appears when developer menu is turned on.
+-Fixed Minor bug in real debrid save menu
+-Fixed UploadLog has been fixed
+-Fixed Force close for Android
+-Fixed Bug for Notifications Window selecting both dismiss and remind me later(mainly with nvidea shield)
+* Note: If you switch between one wizard using aftermath wizard to another, you can copy the 3 folders in addon_data(trakt, debrid, login) to the other wizard then import the data.
 
-v0.1.0.2
+v0.1.4
+-Mod   Minor changes to Notify on startup
+-Mod   Extract.py now excludes wizard folder if contained in build.
+-Mod   New Clear Cache Code ignores .log files.
+-Mod   Fixed Error check log on viewing log file when doesnt exists.
+-Rem   For the time being 'skin.estuary' has been removed from skin swap. 
+-Bug Fixes
+
+v0.1.3
+-Added Debugging on check for build update
+-Added Wizard.log to view only messages from wizard itself
+-Added Text File to add your own APK's
+-Added Auto Clean on startup[Cache and Packages]
+-Mod   Clear Cache works better than before
+-Mod   Made a seperate window for the test Notifications window
+
+v0.1.2
+-Added RemoveAddon and RemoveAddonData menus
+-Added Developer menu with Test Notifications Window, Convert Paths to Special
+-Added Save Data Menu with Real debrid, Trakt support, and keep files
+-Added AutoConfig form on the website to autocreate wizard file.
+-Added Auto Install repo if not installed
+-Added APK Installer for spmc and kodi on android
+-Mod   Auto Save of trakt and debrid is alot better on fresh start/build install
+-Mod   Notifications Window now has either Image header or Text Header support
+-Mod   If no Isengard and below builds hide the [-] Isengard and below and vice versa
+-Mod   If only one build is avaliable it skips to view build instead of view build list
+-Fixed bug in trakt menu if exodus, etc was installed
+-Improved Code
+
+v0.1.1
+-Added support for custom main menu icons
+-Added ability to hide seperators in the menu(======='s)
+-Added the ability to decide how often it checks for build updates
+-Added purgeDB for all db files(Multiselect for Kodi 16+ and SingleSelect for below)
+-Added auto removal of chars from zip name that arent allowed
+-Added if a db file doesnt delete it will purge it
+-Added in Settings Do not seperate builds by version
+-Fixed trakt addons now will show the addon icon/fanart if the addon is installed
+-Fixed error in the Auto Update
+-Fixed dialogs covering up the 'View Errors' textbox
+
+v0.1.0
 -Various bug fixes
 -Add skinSwap to force skin back to confluence
 
-v1.0.1
+v0.0.1c
 -Fixed the errors on extract message
 -Relocated add user edit variables to uservar.py
 -Seperated builds by kodi version
 
-v1.0
+v0.0.1
 -Initial Release
